Button spacing fix

--- a/_sass/components/_button.scss
+++ b/_sass/components/_button.scss
@@ -30,6 +30,7 @@
 		letter-spacing: _font(letter-spacing-alt);
 		line-height: 3.5em;
 		padding: 0 1.75em;
+		margin: 0.5em 0 0.5em 0;
 		text-align: center;
 		text-decoration: none;
 		text-transform: uppercase;
